--- a/xkcd_dbt/dbt_project.yml
+++ b/xkcd_dbt/dbt_project.yml
@@ -33,8 +33,8 @@ models:
   xkcd_dbt:
     # Config indicated by + and applies to all files under models/example/
     bronze:
-      materialized: ephemeral
-    silver:
-      materialized: view
-    gold:
       materialized: table
+    silver:
+      materialized: table
+    gold:
+      materialized: view
